Fri Mar 15 12:19:58 2002  Chad Elliott  <elliott_c@ociweb.com>

        * include/makeinclude/platform_vxworks5.x_ghs.GNU:

          Added support for building with exceptions enabled.

Fri Mar 15 05:59:45 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/SPIPE_Acceptor.cpp: Removed the ACE_ASSERT (result == FALSE)
	  macro call.  Thanks to Oleg Burlachenko <ua_fireball@yahoo.com>
 	  for reporting this.

Fri Mar 15 00:16:06 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* include/makeinclude/platform_freebsd.GNU:
	* include/makeinclude/platform_netbsd.GNU:
	  Make -fno-implicit-templates conditional, instead of default.
	  Thanks to Denis Otchenashko <oko@bank.gov.ua> for motivating
	  me to look into this and fix this.

Thu Mar 14 12:50:00 2002  Si Mong Park  <spark@ociweb.com>

        * ace/OS_String.h:
        * ace/OS_String.inl:
        * ace/OS_String.cpp:
          Fixed a skipping strtok_r_emulation definition when ACE_HAS_WCHAR is
          defined.

Thu Mar 14 11:26:41 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* performance-tests/Misc/context_switch_time.cpp: Renamed the
	  internally used macro, DEBUG, to ACE_DEBUG_CST to avoid clashing
	  with the compiler defined macro.  Thanks to Allan S Iverson
	  <allaniverson@sprynet.com> for motivating the fix.

Thu Mar 14 09:17:55 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Strategies_T.cpp (activate_svc_handler): Added a call to
	  destroy() the svc_handler if ACE::fork() fails.  Thanks to
 	  Rainer Lucas <rainer.lucas@fun.de> for reporting this.

	* ace/Configuration.cpp (remove_section): Made the code consistent
	  for all versions of Windows.  Thanks to Jon Lambert
 	  <jlsysinc@ix.netcom.com> for the fix.

	* examples/Service_Configurator/IPC-tests/client/remote_service_directory_test.cpp (ACE_TMAIN): Added
	  '\n' to the end of command strings so that the client won't hang.  Thanks to
	  Marc M Adkins <Marc.M.Adkins@doorways.org> for this fix.
