@@ -19,7 +19,7 @@
 <table width="100%" border=1>
   <tr valign=top>
     <td><b>Fully supported, i.e., continually tested and used daily</b></td>
-    <td>Solaris 2.5, 2.6, and 7, Windows NT/2000 (MSVC 5.x, 6.x, and 7.x and
+    <td>Solaris 2.5, 2.6, 7, and 8, Windows NT/2000 (MSVC 5.x, 6.x, and 7.x and
         Borland C++ Builder 5), Linux/Intel, Linux/Alpha, VxWorks, LynxOS,
         Digital UNIX 4.0 and 5.0, IRIX 6.x, and QNX Neutrino 2.0
     </td>
