@@ -32,16 +32,15 @@ abide by the following policies:
 
 <UL>
 
-<LI> All bug reports that are submitted using the appropriate bug
-report form in <A
-HREF="../PROBLEM-REPORT-FORM">$ACE_ROOT/PROBLEM-REPORT-FORM</A>
-or <A
+<LI> All bug reports to the ACE+TAO <A
+HREF="http://www.cs.wustl.edu/~schmidt/ACE-mail.html">mailing
+lists</A> should be submitted using the appropriate bug report form in
+<A HREF="../PROBLEM-REPORT-FORM">$ACE_ROOT/PROBLEM-REPORT-FORM</A>
+(for ACE) or <A
 HREF="../TAO/PROBLEM-REPORT-FORM">$TAO_ROOT/PROBLEM-REPORT-FORM</A>
-will be given a tracking number and entered into our <A
-HREF="http://deuce.doc.wustl.edu/bugzilla">bug tracking database</A>.
-Please use these forms since bug reports that are not submitted in
-this form are likely to fall through the cracks.  Here is our policy
-for addressing these bug reports: <P>
+(for TAO).  Please use these forms since bug reports that are not
+submitted in this form are likely to fall through the cracks.  Here is
+our policy for addressing these bug reports: <P>
 
 <OL>
 
@@ -60,14 +59,14 @@ permits. <P>
 
 </OL>
 
-<LI> If it's a bug report that doesn't fall into the preceding three
-categories, the submitter should enter it into our <A
-HREF="http://deuce.doc.wustl.edu/bugzilla">bug tracking database</A> for
-future processing.  We will address these bugs as time permits, but
-may not get to it for a while unless it affects our work or the work
-of our sponsors.  If you'd like an immediate response, please contact
-<A HREF="mailto:schmidt@cs.wustl.edu">me</A> about becoming a sponsor
-or contact <A HREF="http://www.riverace.com">Riverace</a> or <A
+<LI> You should also consider entering your bug report into our <A
+HREF="http://deuce.doc.wustl.edu/bugzilla">bug tracking database</A>
+so that it's archived for future processing.  We try to address these
+bugs as time permits, but may not get to them for a while unless it
+affects our work or the work of our sponsors.  If you'd like an
+immediate response, please contact <A
+HREF="mailto:schmidt@cs.wustl.edu">me</A> about becoming a sponsor or
+contact <A HREF="http://www.riverace.com">Riverace</a> or <A
 HREF="http://www.theaceorb.com">OCI</A> for commercial support of ACE
 or TAO, respectively. <P>
 
